fix(image tag): fix overflowing image size

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -105,3 +105,7 @@ $summernote-font-color: #000000;
 .ck-body-wrapper {
   position: absolute;
 }
+
+img {
+  max-width: 100%;
+}
